# mc-log-so

./: CMakeLists.txt
.github/workflows/: build.yml
src/: logger.cpp
